# bzip2-cmake-win32

./: .gitignore  CMakeLists.txt  bzlib.c  bzlib.h  bzlib_private.h  compress.c  libbz2.def  libbz2.rc  makefile.vc  runtest.cmake  spewG.c  version.rc.cmakein
